--- a/my-todo-list/package.json
+++ b/my-todo-list/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test —watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
